# Website-Table-Graph

./: .replit  main.py  pyproject.toml
