[tool.poetry]
name = "repl_python3_Website-Table-and-Graph"
version = "0.1.0"
description = ""
authors = ["lxvi-xxiv <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
streamlit = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
